# File_Collector

./: CMakeLists.txt  FileCollector.cpp  FileCollector.h  README.md
tests/: test_filecollector.cpp
